src/tests/snapshots/synoik__tests__window_opening__check_target_size@dwU-dhU-wfsAN.snap
---
source: src/tests/window_opening.rs
description: "default column width: U\ndefault window height: U\nwant fullscreen: AN"
expression: snapshot
---
initial configure:
size: 0 × 688, bounds: 1248 × 688, states: []

post-map configures:
size: 1280 × 720, bounds: 1248 × 688, states: [Fullscreen]
size: 1280 × 720, bounds: 1248 × 688, states: [Fullscreen, Activated]

unfullscreen configure:
size: 1 × 688, bounds: 1248 × 688, states: [Activated]
