src/tests/snapshots/synoik__tests__window_opening__check_target_size@dwU-t.snap
---
source: src/tests/window_opening.rs
description: "default column width: U\ntabbed"
expression: snapshot
---
initial configure:
size: 0 × 688, bounds: 1239 × 688, states: []

post-map configures:
size: 1 × 688, bounds: 1239 × 688, states: [Activated]
