src/tests/snapshots/synoik__tests__window_opening__check_target_size@dwU-wfsAU.snap
---
source: src/tests/window_opening.rs
description: "default column width: U\nwant fullscreen: AU"
expression: snapshot
---
initial configure:
size: 0 × 688, bounds: 1248 × 688, states: []

post-map configures:
size: 0 × 688, bounds: 1248 × 688, states: []
size: 1 × 688, bounds: 1248 × 688, states: [Activated]
